--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build
         run: |
           cd project
-          godot -v --export "HTML5" build/web/index.html
+          godot -v --export "HTML5" ../build/web/index.html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
