--- a/project/export_presets.cfg
+++ b/project/export_presets.cfg
@@ -65,7 +65,7 @@ texture_format/no_bptc_fallbacks=true
 
 [preset.1]
 
-name="NavSim"
+name="Web"
 platform="Web"
 runnable=true
 dedicated_server=false
