--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         - name: Web Build
           run: |
             mkdir -v -p build/web
-            cd $PROJECT_PATH
+            #cd $PROJECT_PATH
             godot --headless --verbose --export-release "HTML5" ../build/web/index.html
         - name: Upload Artifact
           uses: actions/upload-artifact@v4
