--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
             pwd
             #cd $PROJECT_PATH
             godot --headless --verbose --export-release "HTML5" build/web/index.html
-            ls build/
+            ls build/web/
         - name: Upload Artifact
           uses: actions/upload-artifact@v4
           with:
