--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
             pwd
             ls project
             cd $PROJECT_PATH
-            godot --headless --verbose --export-release "HTML5" ../build/web/index.html
+            godot --headless --verbose --export-release "Web" ../build/web/index.html
             ls ../build/web/
         - name: Upload Artifact
           uses: actions/upload-artifact@v4
